--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Maps = function(id,imgSrc,width,height){
 	return self;
 }
 
-Maps.current = Maps('field','img/map.jpg',1280,960);
+Maps.current = Maps('field','img/map.png',1280,960);
 
 
 
