--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ startNewGame = function(){
 	Enemy.randomlyGenerate();
 	Enemy.randomlyGenerate();
 	Enemy.randomlyGenerate();
+    Enemy.randomlyGenerate();
 	
 }
 
